# gpscan

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  ci_win.yml  release.yml
src/: args.rs  compression.rs  filesystem.rs  lib.rs  main.rs  options.rs  platform.rs  scan.rs  volume.rs  xml.rs  xml_output.rs
tests/: integration_test.rs  xml_escape.rs
