[package]
name = "gpscan"
version = "0.0.8"
edition = "2021"
authors = ["kojix2 <2xijok@gmail.com>"]
description = "A tool to generate XML files compatible with GrandPerspective"
license = "MIT"
repository = "https://github.com/kojix2/gpscan"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "cargo"] }
env_logger = "0.11"
log = "0.4"
quick-xml = "0.37"
sysinfo = "0.35"

[dev-dependencies]
tempdir = "0.3"
assert_cmd = "2.0"
predicates = "3.1"
