[package]
name = "gpscan"
version = "0.0.11"
edition = "2021"
authors = ["kojix2 <2xijok@gmail.com>"]
description = "A tool to generate XML files compatible with GrandPerspective"
license = "MIT"
repository = "https://github.com/kojix2/gpscan"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "cargo"] }
env_logger = "0.11"
flate2 = "1.1"
log = "0.4"
quick-xml = "0.38"
sysinfo = "0.36"
zstd = "0.13"

[dev-dependencies]
tempdir = "0.3"
assert_cmd = "2.0"
predicates = "3.1"
